[package]
name = "compression-test"
version = "0.1.0"
authors = ["12101111 <w12101111@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.flate2]
version = "1"
#features = ["rust_backend"]
features = ["zlib"]
default-features = false
